# pdf-processor-services

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.githooks/: commit-msg
.github/workflows/: ci.yaml
docs/: mcp-skills-agents-tools.md
docs/runbooks/: vector-database.md
qdrant_storage/: raft_state.json
skills/: README.md  SKILL.md  candidate-profile-extraction.md  claims-requirements-extraction.md  coverage-exclusions-analysis.md  document-validation.md  fraud-signals-detection.md  generate-express-typescript-backend.md  generate-fastapi-python-backend.md  generate-spring-boot-java-backend.md  insurance-policy-reading.md
skills/cv-reading/: SKILL.md
skills/document-classification/: SKILL.md
skills/document-processing-observability/: SKILL.md
skills/experience-skills-normalization/: SKILL.md
skills/ocr-extraction/: skills.md
skills/pii-redaction/: skills.md
skills/structured-data-mapping/: SKILL.md
src/: __init__.py  config.py  http_api.py  logging_config.py  server.py
src/clients/: ollama.py
src/domain/: blueprints.py  vector_records.py
src/repositories/: vector_database.py
src/routers/: cv_export.py  document.py  prompt.py
src/services/: cv_anonymization.py  cv_extraction.py  cv_pdf_rendering.py  document_persistence.py  document_upload.py  performance.py  prompt_router.py  vector_document_ingestion.py
src/smart_ide_services/: server.py
src/smart_ide_services.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/tools/: backend.py  blueprints.py  document.py
(+10 files in other folders)
