[project]
name = "smart-ide-services"
version = "0.1.0"
description = "FastMCP service that proxies prompts to local Ollama"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=2.4,<4",
  "httpx>=0.27.0",
]

[project.scripts]
smart-ide-service = "smart_ide_services.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
